--- a/index.html
+++ b/index.html
@@ -9006,7 +9006,7 @@
                                 </div>
                                 <div class="constrain constrain--700">
                                     <div class="homepage-hero-band-no-image__actions">
-                                        <a href="https://motor.confused.com" data-ga-click-category="homepage"
+                                        <a href="#" data-ga-click-category="homepage"
                                             data-ga-click-label="hero-product-Car-insurance-Primary-GAQ"
                                             data-mi-event-type="car-button-click" data-mi-click-category="homepage"
                                             data-mi-click-label="homepage-hero-car-insurance-GAQ" rel="nofollow"
