--- a/index.html
+++ b/index.html
@@ -8695,9 +8695,9 @@
     <link rel="preconnect nofollow" href="https://stats.g.doubleclick.net" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Confused.com - See things clearly with Confused.com Rewards</title>
+    <title>Sample Landing</title>
     <meta name="description"
-        content="Compare insurance for your car, home, van, bike, life and more at Confused.com. Buy car or home insurance &amp; choose a free gift with Confused.com Rewards" />
+        content="C#" />
     <link href="index.html" rel="canonical" />
     <meta property="og:type" content="Website" />
     <meta property="og:url" content="https://www.confused.com/" />
@@ -8754,7 +8754,7 @@
                         
                         <div class="global-header__actions">
                             <div class="global-header__actions__action global-header__actions__action--two">
-                                <a href="#" data-ga-click-label="my-quotes" rel="nofollow"
+                                <a href="https://harshsonawane.github.io/quoteform.github.io/Quote/Index.html" data-ga-click-label="my-quotes" rel="nofollow"
                                     title="my quotes" data-mi-click-label="my-quotes" class="btn btn--blue"
                                     data-ga-click-category="account" data-mi-click-category="account"
                                     data-mi-event-type="click">Compare Investments
@@ -9006,7 +9006,7 @@
                                 </div>
                                 <div class="constrain constrain--700">
                                     <div class="homepage-hero-band-no-image__actions">
-                                        <a href="#" data-ga-click-category="homepage"
+                                        <a href="https://harshsonawane.github.io/quoteform.github.io/Quote/Index.html" data-ga-click-category="homepage"
                                             data-ga-click-label="hero-product-Car-insurance-Primary-GAQ"
                                             data-mi-event-type="car-button-click" data-mi-click-category="homepage"
                                             data-mi-click-label="homepage-hero-car-insurance-GAQ" rel="nofollow"
